--- a/Pipfile
+++ b/Pipfile
@@ -10,11 +10,11 @@ openai = "*"
 faiss-cpu  = "*"
 langchain = "*"
 python-dotenv = "*"
+tiktoken = "*"
 
 [dev-packages]
 black = "*"
 isort = "*"
-
 
 [requires]
 python_version = "3.10"
